Getting initial compromise keywords to load on analysis page

--- a/app/templates/analysis.hbs
+++ b/app/templates/analysis.hbs
@@ -1,1 +1,12 @@
 <h1>Analysis</h1>
+
+{{apology.text}}
+
+{{apology.name}}
+
+<h1>Keywords</h1>
+<ul>
+  {{#each apology.keywords as |keyword|}}
+    <li>{{keyword.normal}}</li>
+  {{/each}}
+</ul>
